fix: increase z-index of click-to-top btn

--- a/_sass/misc/click-to-top.scss
+++ b/_sass/misc/click-to-top.scss
@@ -16,6 +16,7 @@
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
   font-size: 24px;
   user-select: none;
+  z-index: 9999;
 
   @include media-query(1024px) {
     width: 48px;
